# eosio.cdt

./: .gitignore  .gitmodules  .pipelinebranch  .travis.yml  404.html  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  ClangExternalProject.txt  Doxyfile  IMPORTANT.md  InstallCDT.cmake  InstallClang.txt  LICENSE  LibrariesExternalProject.txt  README.md  SUMMARY.md  ToolsExternalProject.txt  action_8hpp.html  amazon_linux-2  annotated.html  app-29808ee2c87c7fdfd1ee.js  app-29808ee2c87c7fdfd1ee.js.map  app-c061b3f46779cc7912c0.js  app-c061b3f46779cc7912c0.js.map  app-c44a9b05c90bb4e6f7b0.js  app-c44a9b05c90bb4e6f7b0.js.map  app-da200344febe21ed6777.js  app-da200344febe21ed6777.js.map  app-fa37106b8c7f1650175d.js  app-fa37106b8c7f1650175d.js.map  asset_8hpp.html  aurora.siberian-husky.dog  blanc.sh  build.sh  chain_8h.html  chunk-map.json  classeosio_1_1block__timestamp.html  classeosio_1_1contract.html  classeosio_1_1datastream.html  (+190 more)
examples/abigen_test/: CMakeLists.txt  abitest.cpp  test.cpp
examples/cosmwasm_simple_token/: CMakeLists.txt  token.wasm
examples/exchange/: CMakeLists.txt  exchange.cpp  exchange_accounts.hpp  exchange_state.hpp
examples/hello/: CMakeLists.txt  README.txt  hello.abi  hello.clauses.md  hello.contracts.md  hello.cpp  hello.hpp
examples/message/: CMakeLists.txt  message.cpp
examples/messenger/: CMakeLists.txt  messenger.cpp
examples/send_inline/: CMakeLists.txt  README.txt  send_inline.cpp
examples/singleton_example/: CMakeLists.txt  README.txt
examples/tester/: CMakeLists.txt  build.sh  tester.cpp  tester_tests.hpp
libraries/: CMakeLists.txt
libraries/_TMP/: reflect.hpp  serialize.hpp
libraries/boost/: CMakeLists.txt
libraries/cosmwasm/: CMakeLists.txt  base64.cpp  cosmwasm.cpp  uint128_t.cpp
libraries/crt/: CMakeLists.txt  _crt.s  crt.cpp  elf_crt.s  tt
libraries/eosiolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  base58.hpp  binary_extension.hpp  binary_extensions.hpp  chain.h  compiler_builtins.h  contract.hpp  contract_name.cpp  core_symbol.hpp  core_symbol.hpp.in  coverage.cpp  crypto.cpp  crypto.h  crypto.hpp  currency.hpp  datastream.hpp  db.h  dispatcher.hpp  eosio.hpp  eosiolib.cpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  ignore.hpp  malloc.cpp  memory.cpp  memory.h  memory.hpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  (+19 more)
libraries/internal/: CMakeLists.txt
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt  cxa_virtual_fallback.cpp
libraries/meta_refl/: CMakeLists.txt  LICENSE  README.md
libraries/native/: .intrinsics.cpp.swp  CMakeLists.txt  crt.cpp  crt.hpp  elf_crt.s  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  intrinsics_impl.hpp  macho_crt.s  tester.hpp
libraries/rt/: CMakeLists.txt  ashlti3.c  ashrti3.c  compiler_builtins.cpp  compiler_builtins.hpp  divti3.c  int_t.h  lshrti3.c  modti3.c  multi3.c  udivmodti4.c  udivti3.c  umodti3.c
libraries/softfloat/: CMakeLists.txt
modules/: BlancExecutableNames.cmake  BlancPluginsExternalProject.cmake  CDTLibConfig.cmake.in  CDTWasmToolchain.cmake.in  CMakeLists.txt  ClangExternalProject.txt  EosioCDTMacros.cmake  EosioCDTMacros.cmake.in  EosioCDTNative.cmake  EosioExecutableNames.txt  EosioLibConfig.cmake.in  EosioPluginsExternalProject.txt  EosioWasmToolchain.cmake  EosioWasmToolchain.cmake.in  EosioWasmToolchainBuild.cmake  EosioWasmToolchainBuild.cmake.in  EosioWasmToolchainPackage.cmake.in  InstallBlanc.cmake  InstallCDT.cmake  LibrariesExternalProject.cmake  LibrariesExternalProject.txt  TestsExternalProject.cmake  TestsExternalProject.txt  ToolsExternalProject.cmake  ToolsExternalProject.txt  blanc-config.cmake  cdt-config.cmake  eosio.cdt-config.cmake  eosio.cdt-config.cmake.in  fetch_content.cmake
plugins/: CMakeLists.txt
plugins/cosmwasm/: CMakeLists.txt
plugins/eosio/: CMakeLists.txt  attrs.cpp  codegen.cpp
temp/: TODO  (+2 more)
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  action_results_test.cpp  capi_tests.cpp  codegen_tests.cpp  contracts.hpp.in  dispatch_hook_tests.cpp  kv_make_key_tests.cpp  kv_tests.cpp  main.cpp  memory_tests.cpp  reflection_tests.cpp  stack_canary_test.cpp
tests/tester/: CMakeLists.txt  config.py  main.py  printer.py  settings.py  tester.cpp  tests.py  testsuite.py
tests/unit/: .#CMakeLists.txt  .name_tests.cpp.swp  CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  eosio_tests.cpp  eostring_tests.cpp  fixed_bytes_tests.cpp  multi_index_tests_basic.cpp  multi_index_tests_secondary.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  string_tests.cpp  string_tests1.cpp  string_tests2.cpp  symbol_tests.cpp  system_tests.cpp  test_runner.sh.in  time_tests.cpp  tree_tests.cpp  varint_tests.cpp  vector_tests.cpp  version_tests.sh
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  ]:w  cdt-abidiff.cpp.in  eosio-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  eosio-abigen.cpp.in
tools/abimerge/: CMakeLists.txt
tools/build_sys/: CMakeLists.txt  eosio-build.cpp.in
tools/cc/: .#eosio-cpp.cpp.in  CMakeLists.txt  cdt-cc.cpp.in  cdt-cpp.cpp.in  eosio-cc.cpp.in  eosio-cpp.cpp.in
tools/eosio_abigen_tool/: CMakeLists.txt  abi.hpp  eosio-abigen.cpp.in
tools/eosio_c_tool/: CMakeLists.txt  eosio-cc.cpp.in  eosio-cpp.cpp.in
tools/eosio_ld_tool/: CMakeLists.txt  eosio-ld.cpp.in
tools/include/: compiler_options.hpp.in
tools/init/: CMakeLists.txt  cdt-init.cpp  eosio-init.cpp
tools/integration-tester/: CMakeLists.txt  README.md  integration-tester  main.py  printer.py  settings.py  testrunner.py  tests.py  testsuite.py
tools/ld/: CMakeLists.txt  cdt-ld.cpp.in  eosio-ld.cpp.in
tools/native_tester/: CMakeLists.txt  native_tester.cpp
tools/proj/: CMakeLists.txt  eosio-proj.cpp
tools/src/: base.cpp  base.cpp.in  blanc-ar.cpp.in  blanc-cc.cpp.in  blanc-cpp.cpp.in  blanc-ld.cpp.in  blanc-ranlib.cpp.in  cc.cpp  cc.cpp.in  cc.hpp  cc_options.td  dummy.cpp  dummy.cpp.in  ld.cpp  ld.cpp.in  ld_options.td  postpass.cc
(+3371 files in other folders)
